# androix-proto-x11proto

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  X.h  XF86keysym.h  Xalloca.h  Xarch.h  Xdefs.h  Xfuncproto.h.in  Xfuncs.h  Xmd.h  Xos.h  Xos_r.h  Xosdefs.h  Xpoll.h.in  Xproto.h  Xthreads.h  Xw32defs.h  Xwindows.h  Xwinsock.h  configure.ac  keysym.h  keysymdef.h  xproto.pc.in
